--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/hooks": "^7.1.2",
     "@prisma/client": "^5.4.2",
     "dayjs": "^1.11.10",
+    "lodash": "^4.17.21",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
