--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "dependencies": {
     "@mantine/core": "^7.1.2",
     "@mantine/dates": "^7.1.2",
+    "@mantine/dropzone": "^7.1.2",
     "@mantine/hooks": "^7.1.2",
     "@prisma/client": "^5.4.2",
     "dayjs": "^1.11.10",
+    "jotai": "^2.4.3",
     "lodash": "^4.17.21",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "react-simple-toasts": "^5.10.0"
   },
   "devDependencies": {
     "@types/node": "^20",
