--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-simple-toasts": "^5.10.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.199",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
