--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@mantine/dropzone": "^7.1.2",
     "@mantine/hooks": "^7.1.2",
     "@prisma/client": "^5.4.2",
+    "@types/papaparse": "^5.3.9",
     "dayjs": "^1.11.10",
     "jotai": "^2.4.3",
     "lodash": "^4.17.21",
     "next": "13.5.4",
+    "papaparse": "^5.4.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
