--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.11.10",
     "jotai": "^2.4.3",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "next": "13.5.4",
     "papaparse": "^5.4.1",
     "react": "^18",
