--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@tiptap/starter-kit": "^2.1.13",
     "@types/papaparse": "^5.3.9",
     "dayjs": "^1.11.10",
+    "echarts": "^5.4.3",
+    "echarts-for-react": "^3.0.2",
     "jotai": "^2.4.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
