--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/dates": "^7.1.2",
     "@mantine/dropzone": "^7.1.2",
     "@mantine/hooks": "^7.1.2",
+    "@mantine/notifications": "^7.7.1",
     "@mantine/tiptap": "^7.2.2",
     "@prisma/client": "^5.4.2",
     "@tabler/icons-react": "^2.42.0",
