--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://bip:Production_123@localhost:5433/ninox_fox?schema=public"
+TEST=123
