--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dayjs": "^1.11.10",
     "echarts": "^5.4.3",
     "echarts-for-react": "^3.0.2",
+    "framer-motion": "^11.2.6",
     "iron-session": "^8.0.1",
     "jotai": "^2.4.3",
     "lodash": "^4.17.21",
