--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "moment": "^2.29.4",
     "mqtt": "^5.5.0",
     "next": "13.5.4",
+    "next-scroll-loader": "^0.1.1",
     "papaparse": "^5.4.1",
     "react": "^18",
     "react-dom": "^18",
